--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Hello, World!</h1>
     <p>This is a sample HTML document.</p>
-    
+    <p>this is paragraph added by second person</p>
+    <span>added by second person</span>
 </body>
 </html>
