--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <p>This is a sample HTML document.</p>
     <p>this is paragraph added by second person</p>
     <span>added by second person</span>
+    <div>
+        <p>Another paragraph added by first person</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, hic suscipit, natus voluptatibus nemo fugit, possimus maxime ipsum magnam asperiores a modi ullam qui obcaecati quidem at ea iure culpa recusandae cumque aspernatur?</p>
+    </div>
 </body>
 </html>
